versioned_docs/version-5.35.0/_shared/eventcalendar/resources.mdx
Resources can be many things, ranging from **people** through **conference rooms** to **company assets**, that need schedulig. The Eventcalendar can handle multiple resources inside a single instance.

The resource object supports the following properties:

- `background` _String_ - Specifies the background color of the resource row or column.
- `children` _Array of object_ - Array of resource objects which will render as a child of the specified resource.
- `collapsed` _Boolean_ - Defines the displayed state of the child resoruce group.
- `id` _Number, String_ - This is an id that can be referenced in the events/invalids/colors data.
- `name` _String_ - The name of the resource that will be displayed at the top of the resource column.
- `color` _String_ - The color controls the default event color of the resource. Event colors can be specified further on the event object itself. If the color is omitted the events of the resource will inherit the default calendar color.
- `fixed` _Boolean_ - Specifies whether the resource is fixed to the top. It applies for timeline view if `resolutionVertical` in [view](#opt-view) option is not given, or it's value is set to `none`.
- `eventCreation` _Boolean_ - Disables event creation on specific resources by setting it to false. It's true by default.
- `eventDragBetweenResources` _Boolean_ - Specifies whether the events in the specified resource are movable across resources. It applies for scheduler and timeline views and has precedence over [`dragBetweenResources`](api#opt-dragBetweenResources) option.
- `eventDragBetweenSlots` _Boolean_  - Specifies whether the events in this resource are movable in time. Has precedence over the [dragInTime](#opt-dragInTime) option.
- `eventDragInTime` _Boolean_ - Specifies whether the events in the specified resource are movable in time. Has precedence over the [`dragInTime`](api#opt-dragInTime) option.
- `eventOverlap` _Boolean_ - Specifies whether the events in this resource can be overlapped. Has precedence over the [eventOverlap](#opt-eventOverlap) option.
- `eventResize` _Boolean_ - Specifies whether the events in the specified resource are resizable. Has precedence over [`dragToResize`](api#opt-dragToResize) option.
- `reorder` _Boolean_ - Specifies whether the resource can be dragged and reordered. It applies for timeline view if `resourceReorder` in [view](#opt-view) option is enabled. Has precedence over the `resourceReorder` property.

Besides the base properties you can add any custom property, like title, job, etc.

```javascript title="Defining resources"
const myResources = [
  { id: "my_id_1", name: "Jane", job: "Developer" },
  { id: "my_id_2", name: "Bob", job: "Administrator" },
  { id: "my_id_3", name: "Andy", job: "Designer" },
];
```

:::tip
For more information on resource grouping and hierarchy check out the [timeline's](timeline#resource-grouping-and-hierarchy) or the [scheduler's](scheduler#resource-grouping) sections for resources.
:::

[Events](api#opt-data), [colors](api#opt-colors), [invalids](api#opt-invalid) can be tied to a single or multiple resources. This can be done with the `resource` property of the objects, where the id of the resource should be passed. It can be a single value and the element would be linked to a single resource or in case of an array the element will show up at the specified resources. If no resource property is specified to the color/event/invalid object then the element will show up in every resource group.

```javascript title="Invalid rule for specific resources"
const myResources = [
  { id: 1, name: 'General Courier'},
  // highlight-start
  { id: 2, name: 'Express Courier'},
  { id: 3, name: 'Super Express Courier'},
  // highlight-end
];

const myInvalid = [
  {
    // highlight-next-line
    resource: [2, 3]
    // is unavailable at weekends:
    recurring: {
      repeat: 'weekly',
      weekDays: 'SU,SA',
      interval: 1
    }
  }
];
```

:::tip
Check out the [recurrence section](../core-concepts/recurrence) for more details on recurring rules
:::

